--- a/numero-secreto/style.css
+++ b/numero-secreto/style.css
@@ -78,3 +78,11 @@ h3 span {
     border: 2px solid #FFFFFF;
     box-shadow: 0px 0px 10px var(--secondary-color);
 }
+
+.btn-jogar {
+    padding: 8px 15px;
+    border: 0;
+    background: var(--primary-color);
+    margin-top: 20px;
+    border-radius: 5px;
+}
